Formatted files and created an example .env
