# doc/swagger.json
@@ -7,9 +7,7 @@
   },
   "host": "localhost:8001",
   "basePath": "/",
-  "schemes": [
-    "http"
-  ],
+  "schemes": ["http"],
 
   "parameters": {
     "email": {
@@ -72,11 +70,7 @@
             "in": "body",
             "schema": {
               "type": "object",
-              "required": [
-                "email",
-                "password",
-                "name"
-              ],
+              "required": ["email", "password", "name"],
               "properties": {
                 "email": {
                   "type": "string",
@@ -112,11 +106,14 @@
     "/api/admins": {
       "get": {
         "description": "Obtem uma lista de admins",
-        "parameters": [{
-          "$ref": "#/parameters/email"
-        },{
-          "$ref": "#/parameters/password"
-        }],
+        "parameters": [
+          {
+            "$ref": "#/parameters/email"
+          },
+          {
+            "$ref": "#/parameters/password"
+          }
+        ],
         "responses": {
           "200": {
             "description": "Este endpoint retorna a lista de admins por defeito"
